experience.css : fix word spacing in .symdisplay

--- a/static/styles/experience.css
+++ b/static/styles/experience.css
@@ -318,4 +318,5 @@ body .container .content .signup-cont {
 
 .symdisplay {
     margin-left: 5px;
+	word-spacing: -0.7em;
 }
